Working on integration tests with h2